--- a/index.html
+++ b/index.html
@@ -1,84 +1,51 @@
+<!DOCTYPE html>
+<html>
 
-<html lang="es">
-  <head>
-      <title>Ejemplo Leaflet mapa base</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="author" content="autor" />
-      <meta name="description" content="descripción página" />
-      <meta name="robots" content="index,follow" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.css" />
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.js"></script>
-      <style>
-          body {
-              margin: 0;
-          }
-  
-          #map {
-              height: 100%;
-              width: 100%;
-              background-color: #ffffff
-          }
-      </style>
-  
-      <script>
-          var map, osm, controlCapas;
-  
-          function init() {
-              map = L.map('map', {
-                  center: [42.6863, 2.8382],
-                  zoom: 7
-              });
-              osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                  maxZoom: 19,
-                  minZoom: 1,
-                  attribution: '&copy; <a href="http://www.openstreetmap.org/copyright"/>OpenStreetMap</a>'
-              });
-  
-              var Esri_WorldImagery =
-                  L.tileLayer(
-                      'http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-                      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX,GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-                  });
-  
-  
-              var hibrid = L.layerGroup();
-  
-              var Esri_WorldImagery2 =
-                  L.tileLayer(
-                      'http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-                      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX,GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-                  }).addTo(hibrid);
-  
-              var Stamen_TonerHybrid = L.tileLayer(
-                  'https://stamen-tiles-{s}.a.ssl.fastly.net/toner-hybrid/{z}/{x}/{y}{r}.{ext}', {
-                  attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-                  subdomains: 'abcd',
-                  minZoom: 0,
-                  maxZoom: 20,
-                  ext: 'png'
-              }).addTo(hibrid);
-  
-              hibrid.addTo(map);
-  
-              var mapaBase = {
-                  'Mapa': osm,
-                  'Foto': Esri_WorldImagery,
-                  'Hibrid': hibrid
-              };
-              controlCapas = L.control.layers(mapaBase, null, { collapsed: true });
-              controlCapas.addTo(map);
-              controlEscala = L.control.scale();
-              controlEscala.addTo(map);
-          }
-      </script>
-  </head>
-  
-  <body onLoad="init()">
-      <div id="map"> </div>
-  </body>
-  
-  </html>
+<head>
+  <title>Mis mapas
+  </title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <style>
+    html {
+      overflow: hidden
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-light bg-light">
+    <a target="_self" class="navbar-brand" href="index.html">
+      Inicio
+    </a>
+  </nav>
+  <div class="container">
+    <h5>Mis Mapas</h5>
+    <ul>
+      <li>
+        <h6>
+          <a target="_blank" href="leaflet-basic.html">Ejemplo básico</a>
+        </h6>
+      </li>
+      <li>
+        <h6>
+          <a target="_blank" href="leaflet-controles.html">control capas</a>
+        </h6>
+      </li> 
+    </ul>
+
+  </div>
+
 
 
 </body>
