--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
           <a target="_blank" href="leaflet-controles.html">control capas</a>
         </h6>
       </li> 
+
+      <li>
+        <h6>
+          <a target="_blank" href="leaflet-provider.html">Ejemplo básico</a>
+        </h6>
+      </li>
+      <li>
+        <h6>
+          <a target="_blank" href="mapabase.html">control capas</a>
+        </h6>
+      </li> 
+
+
     </ul>
 
   </div>
