buscador de farmacias

--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
       </li>
       <li>
         <h6>
-          <a target="_blank" href="leaflet-controles.html">control capas</a>
+          <a target="_blank" href="leaflet-controles.html">Ejemplo control capas</a>
         </h6>
       </li> 
 
       <li>
         <h6>
-          <a target="_blank" href="leaflet-provider.html">Ejemplo básico</a>
+          <a target="_blank" href="leaflet-provider.html">Ejemplo provider</a>
         </h6>
       </li>
       <li>
         <h6>
-          <a target="_blank" href="mapabase.html">control capas</a>
+          <a target="_blank" href="mapabase.html">mapa base</a>
         </h6>
       </li> 
 
