buscador de farmacias

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           <a target="_blank" href="mapabase.html">mapa base</a>
         </h6>
       </li> 
-
+      <li>
+        <h6>
+          <a target="_blank" href="farmacias.html">buscador de farmacias</a>
+        </h6>
+      </li>
+      
 
     </ul>
 
